--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-dotenv": "^3.3.1",
     "react-native-maps": "^1.3.1",
     "react-native-svg": "^13.1.0",
     "react-native-video": "^6.0.0-alpha.1",
