--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-maps": "^1.3.1",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.1.0",
-    "react-native-video": "^6.0.0-alpha.1",
-    "react-navigation": "^4.4.4"
+    "react-native-video": "^6.0.0-alpha.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
