--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.1.0",
     "react-native-video": "^6.0.0-alpha.1",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
