added map with markers on it from json file

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyBPJF6fCI7gfM03nL71qASJb4c0nUe_Ro8" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
